Acrescentando cursor para o changed-references
